k8s/ckan/overlays/test/environment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: odeckan # (1)
spec:
  template:
    spec:
      - name: ode-ckan # (1)
        env:
        - name: CKAN_SQLALCHEMY_URL
          valueFrom:
            secretKeyRef:
              key: ode-ckan-test-pg-conn-string
              name: ode-ckan-test-secrets
