k8s/ckan/overlays/test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ode-ckan-ingress-test
spec:
  tls:
  - hosts:
    - ode-ckan-test.de-prod.dk
    secretName: ode-ckan-test-ingress-tls
  rules:
  - host: ode-ckan-test.de-prod.dk
    http:
      paths:
      - backend:
          service:
            name: odeckan-service
            port:
              number: 5000
        path: /(.*)
        pathType: ImplementationSpecific
status: {}
