k8s/ckan/overlays/test/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odeckan
spec:
  selector:
    matchLabels:
      app: odeckan
  template:
    spec:
      containers:
      - name: ode-ckan
        resources:
          requests:
            memory: 2Gi
            cpu: 1000m
          limits:
            memory: 4Gi
            cpu: 2000m
