k8s/ckan/overlays/test/secretconfig.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odeckan
spec:
  selector:
    matchLabels:
      app: odeckan
  template:
    spec:
      volumes:
      - csi:
          driver: secrets-store.csi.k8s.io
          nodePublishSecretRef:
            name: kvcreds
          readOnly: true
          volumeAttributes:
            secretProviderClass: "ode-ckan-test-secretprovider"
        name: ckan-secrets
